<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JVDemo</string>
    <string name="action_settings">Settings</string>
    <string name="dev_num">Device ID：</string>
    <string name="dev_demo">A361</string>
    <string name="dev_channel_num">Channel Count：</string>
    <string name="connect_channel_num">Connect channel：</string>
    <string name="connect_channel_error">连接的通道号必须小于等于通道数量</string>
    <string name="not_connected">video not connected</string>
    <string name="dev_demo_channelnum">1</string>
    <string name="dev_ip">Device IP：</string>
    <string name="dev_demo_ip"></string>
    <string name="dev_port">Device port：</string>
    <string name="dev_demo_port">9101</string>
    <string name="dev_user">UserName：</string>
    <string name="dev_demo_user">abc</string>
    <string name="dev_pwd">Password：</string>
    <string name="dev_demo_pwd">123</string>
    <string name="dev_connect_normal">Normal Connect</string>
    <string name="dev_connect_ap">AP Connect</string>
    <string name="dev_wave_set">Sound-wave Configuration</string>
    <string name="through_agreement">Transparent transmission</string>
    <string name="show_osd">show osd</string>
    <string name="dismiss_osd">dismiss osd</string>
    <string name="modifypass">Edit password</string>
    <string name="changetoap">Change to AP</string>
    <string name="changetosta">Change to STA</string>
    <string name="netinfo">Net Info</string>
    <string name="changetoap_tips">Are you sure change the device to AP mode？</string>
    <string name="broadcastall">All Broad</string>
    <string name="broadcastlan">Lan Broad</string>
    <string name="alert">Alert</string>
    <string name="edit_user_pass_tips1">The default password, suggest changes.</string>
    <string name="edit_user_pass_tips2">Edit Administrator\'s password.</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="modifypass_success">Password edit success。</string>
    <string name="audiolistener">Audio listener</string>
    <string name="audiolistening">listening</string>
    <string name="voicecall">Voice call</string>
    <string name="wifiset">Wi-Fi configuration</string>
    <string name="set">configuration</string>
    <string name="set_success">configuration success</string>
    <string name="set_failed">configuration failed</string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="record_savedas">Record file saved at：</string>
    <string name="changestream">stream</string>
    <string name="hd">HD</string>
    <string name="sd">SD</string>
    <string name="fluent">Fluent</string>
    <string name="voice_send">press to talk</string>
    <string name="voice_stop">release to stop</string>
    <string name="str_call_close">Disabled the Two-way talk function.</string>
    <string name="voice_tips1">You can speak to the other now.</string>
    <string name="voice_tips2">Audio talk is enabled successfully. You can speak to the other through long-click.</string>
    <string name="has_calling">The Two-way Talk has not been enabled or is being used by other user, so please try again later.</string>
    <string name="checkremote">Remote playback</string>
    <string name="wifi_name">Wi-fi name</string>
    <string name="wifi_pass">Wi-fi password</string>
    <string name="send_wave">Sound wave sending</string>
    <string name="wifi_name_notnull">Wi-fi name not null</string>
    <string name="wifi_pass_notnull">Wi-fi password not null</string>

    <!-- RemotePlayBackActivity -->
    <string name="search">Search</string>
    <string name="str_start_time">start time</string>
    <string name="str_save_path">saved path</string>
    <string name="str_video_load_failed">load failed</string>
    <string name="str_video_nodata_failed">none data</string>
    <string name="video_normal">Manual Recording</string>
    <string name="video_alarm">Alarm Recording</string>
    <string name="video_motion">Motion detection</string>
    <string name="video_time">Regular Recording</string>
    <string name="waiting">waiting...</string>
    <string name="closed">Closed</string>
    <string name="connectting">Connecting...</string>
    <string name="buffering">Buffering...</string>
    <string name="connectfailed">Connect failed</string>
    <string name="str_change_zoom">Zoom</string>
    <string name="str_change_focus">Focus</string>
    <string name="connfailed_auth">Username or password wrong</string>
    <string name="connfailed_channel_notopen">This channel does not exist or is not open.</string>
    <string name="connfailed_type_invalid">Invalid Connection Mode.</string>
    <string name="connfailed_maxcount">Exceed connection limitation.</string>
    <string name="connfailed_timeout">Connect timeout</string>
    <string name="connfailed_checkpass_timout">Connect timeout.</string>
    <string name="connfailed_auth_tips">Username or password wrong, change now?</string>
    <string name="connect_failed">Connect failed</string>
    <string name="abnormal_closed">Abnormal disconnection happened.</string>
    <string name="str_scanlandevice">Device in Lan</string>
    <string name="overflow">max count</string>
    <string name="connecting_buffer1">Buffering now</string>
    <string name="connecting_buffer2">Buffering now…</string>
    <string name="abnormal_closed1">Abnormal disconnection happened.</string>
    <string name="abnormal_closed2">Connection service is stopped, disconnected</string>
    <string name="abnormal_closed3">Unnecessary reconnect</string>
    <string name="abnormal_closed4">no connection</string>
    <string name="abnormal_closed5">Disconnect the connection failed</string>

</resources>