<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center_horizontal" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_num" />

            <EditText
                android:id="@+id/dev_num"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo"
                android:text="B95064839" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_channel_num" />

            <EditText
                android:id="@+id/channel_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_channelnum"
                android:text="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_channel_num" />

            <EditText
                android:id="@+id/connect_channel_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_channelnum"
                android:text="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_ip" />

            <EditText
                android:id="@+id/dev_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_ip"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_port" />

            <EditText
                android:id="@+id/dev_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_port"
                android:text="9101" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_user" />

            <EditText
                android:id="@+id/dev_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_user"
                android:text="abc" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_pwd" />

            <EditText
                android:id="@+id/dev_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dev_demo_pwd"
                android:password="true"
                android:text="123" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/normal_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dev_connect_normal" />

        <Button
            android:id="@+id/ap_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dev_connect_ap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/broadcastall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/broadcastall" />

        <Button
            android:id="@+id/broadcastlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/broadcastlan" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dev_wave_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dev_wave_set" />
    </LinearLayout>

</LinearLayout>